# montreal_festival

./: .gitignore  README.md  pyproject.toml
data/: guide-des-festivals-dete-montreal.html
src/mtlfestivalparser/: __init__.py  log_config.py  models.py
src/mtlfestivalparser/export/: __init__.py  ics.py
src/mtlfestivalparser/parser/: __init__.py  date.py  kawalees.py  mtl_org.py  parse.py
