[project]
name = "montreal-festival"
version = "0.1.0"
description = "Parse Montreal Festivals to generate a Calendar file"
authors = [
  { name = "Antoine Veuiller", email = "aveuiller@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "loguru>=0.6.0",
    "ics>=0.7.2",
    "typer>=0.25.1",
    "requests>=2.34.2",
]

[build-system]
requires = ["uv_build<=1.0.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "mtlfestivalparser"
module-root = "src"

[project.scripts]
parser = "mtlfestivalparser:main"

